--- a/myapp/views/interface.ejs
+++ b/myapp/views/interface.ejs
@@ -9,9 +9,7 @@
 </head>
 <body>
 <div>
-    <h1>接口测试3</h1>
-    <a href="/"><h3>接口测试1</h3></a>
-    <a href="/secret"><h3>接口测试2</h3></a>
+    <h2>接口测试3 / <a href="/">接口测试1</a> / <a href="/secret">接口测试2</a></h2>
     <button type="button" class="btn btn-default" onclick="VerifySignByP7()">P7验签</button>
     <button type="button" class="btn btn-default" onclick="KeyDigitalSignByP1()">P1签名（域签）</button>
     <button type="button" class="btn btn-default" onclick="VerifyDigitalSignByP1()">P1验签（域签）</button>
