--- a/myapp/views/secret.ejs
+++ b/myapp/views/secret.ejs
@@ -9,9 +9,7 @@
 </head>
 <body>
 <div>
-    <h1>接口测试2</h1>
-    <a href="/"><h3>接口测试1</h3></a>
-    <a href="/interface"><h3>接口测试3</h3></a>
+    <h2>接口测试2 / <a href="/">接口测试</a> / <a href="/interface">接口测试3</a></h2>
     <button type="button" class="btn btn-default" onclick="EncryptFile()">对称加密</button>
     <button type="button" class="btn btn-default" onclick="DevryptFile()">对称解密</button>
     <button type="button" class="btn btn-default" onclick="KeyEncryptData()">非对称加密</button>
@@ -23,7 +21,7 @@
     <h3 class="text-success" id="text1"></h3>
     <h3 class="text-success" id="text2"></h3>
     <h3 class="text-success" id="text3"></h3>
-    <img id="img-show">
+
 </div>
 
 </body>
