--- a/myapp/views/secret.ejs
+++ b/myapp/views/secret.ejs
@@ -9,20 +9,63 @@
 </head>
 <body>
 <div>
-    <h2>接口测试2 / <a href="/">接口测试</a> / <a href="/interface">接口测试3</a></h2>
-    <button type="button" class="btn btn-default" onclick="EncryptFile()">对称加密</button>
-    <button type="button" class="btn btn-default" onclick="DevryptFile()">对称解密</button>
+    <div class="top">
+        <h2><a href="/">接口测试</a> / 接口测试2 / <a href="/interface">接口测试3</a></h2>
+    </div>
+    <div class="panel panel-default">
+        <div class="panel-body">
+            <div class="form-group">
+                <label for="recipient-name" class="control-label">待加密文件路径，带文件名:</label>
+                <input type="text" class="form-control" id="surEncryption">
+            </div>
+            <div class="form-group">
+                <label for="recipient-name" class="control-label">加密后文件保存路径，带文件名:</label>
+                <input type="text" class="form-control" id="encryption">
+            </div>
+            <button type="button" class="btn btn-default" onclick="EncryptFile()">对称加密</button>
+        </div>
+    </div>
+    <div class="panel panel-default">
+        <div class="panel-body">
+            <div class="form-group">
+                <label for="recipient-name" class="control-label">对称密钥原文:</label>
+                <input type="text" class="form-control" id="symmetricKey">
+            </div>
+            <div class="form-group">
+                <label for="recipient-name" class="control-label">加密文件路径，带文件名:</label>
+                <input type="text" class="form-control" id="encryption2">
+            </div>
+            <div class="form-group">
+                <label for="recipient-name" class="control-label">解密后文件保存路径，带文件名:</label>
+                <input type="text" class="form-control" id="decryptedFiles">
+            </div>
+            <button type="button" class="btn btn-default" onclick="DevryptFile()">对称解密</button>
+        </div>
+    </div>
+
     <button type="button" class="btn btn-default" onclick="KeyEncryptData()">非对称加密</button>
     <button type="button" class="btn btn-default" onclick="KeyDecryptData()">非对称解密</button>
     <button type="button" class="btn btn-default" onclick="KeyEncryptByDigitalEnvelope()">数字信封加密</button>
     <button type="button" class="btn btn-default" onclick="KeyDecryptByDigitalEnvelope()">数字信封解密</button>
 </div>
-<div style="margin-top: 50px">
-    <h3 class="text-success" id="text1"></h3>
-    <h3 class="text-success" id="text2"></h3>
-    <h3 class="text-success" id="text3"></h3>
-
-</div>
+<div class="modal fade" tabindex="-1" role="dialog" id="mymodel">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="text">Modal title</h4>
+            </div>
+            <div class="modal-body">
+                <h4 class="text-success" id="text1"></h4>
+                <h4 class="text-success" id="text2"></h4>
+                <h4 class="text-success" id="text3"></h4>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
 
 </body>
 <script src="https://cdn.bootcss.com/html5shiv/r29/html5.js"></script>
@@ -33,18 +76,19 @@
         $("#text1").html("code:"+res.code);
         $("#text2").html("msg:"+res.msg);
         $("#text3").html("data:"+res.data);
-        $("#img-show").attr("src","");
     }
     function EncryptFile(){
         $.ajax({
             url:"/RS_EncryptFile",
             type:"post",
             data:{
-                souceFilePath:"123",
-                encFilePath:"123"
+                souceFilePath:$("#surEncryption").val(),
+                encFilePath:$("#encryption").val()
             },
             success:function(res){
+                $("#text").html("3.2.1.6.对称加密接口");
                 JudgeCode(res);
+                $('#mymodel').modal('show')
                 console.log(res);
             },
             error:function(res){
@@ -57,12 +101,14 @@
             url:"/RS_DevryptFile",
             type:"post",
             data:{
-                rsKey:"123",
-                encFilePath:"zcxv",
-                dncDirectoryPath:"adsf"
+                rsKey:$("#symmetricKey").val(),
+                encFilePath:$("#encryption2").val(),
+                dncDirectoryPath:$("#decryptedFiles").val()
             },
             success:function(res){
+                $("#text").html("3.2.1.7.对称解密接口");
                 JudgeCode(res);
+                $('#mymodel').modal('show')
                 console.log(res);
             },
             error:function(res){
